# totp

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
cli/: main.rs  storage.rs
src/: colorize.rs  crypto.rs  crypto_trait.rs  errors.rs  helper.rs  lib.rs  main.rs  native.rs  storage.rs  totp.rs
src/crypto/: crypto.rs  crypto_gpg.rs  crypto_ring.rs  crypto_trait.rs  gpg.rs  mod.rs  native.rs  ring.rs
src/utils/: colorize.rs  helper.rs  mod.rs  qr.rs  time_provider.rs
