[package]
name = "totp"
description = "Command-line TOTP (Time-based One-Time Password) generator for two-factor authentication"
version = "0.1.3"
edition = "2024"
authors = ["Podvoyskiy Ilya <ilya.podvoyskiy@gmail.com>"]
license = "MIT"
repository = "https://github.com/podvoyskiy/totp"
readme = "README.md"
keywords = ["totp", "2fa", "cli", "authentication"]
rust-version = "1.88.0"

[dependencies]
base32 = "0.5.1"
colored = "3.0.0"
directories = "6.0.0"
hmac = "0.12.1"
rpassword = "7.4.0"
sha1 = "0.10.6"
